# posts-analytics

./: .gitignore  Makefile  README.md  docker-compose.yml  pyproject.toml
.github/workflows/: test.yml
app/: database.py  loader.py  main.py  models.py  schemas.py  stats.py
scripts/: load_csv.py
tests/: conftest.py  test_stats.py
